feat: add GET user and POST user
